SERVER-3582 -- Mongo Windows Service locks up CPU when computer reboots after a crash

Remove (put on the wrong side of #if 1, actually) the code that was setting
up automatic restarts (forever) after a "failure".  Anything other than a
clean exit would cause automatic restart, and anything other than a clean
exit would leave the mongod.lock file set, which would cause another failure.
We need to have a better scheme for having the Windows service "do the right
thing" after a power failure or system crash, looping forever in failure mode
is not good behavior.